<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bruce</name>
    <version>0.0.1</version>
    <description>
        The BlueROV Underwater SLAM and Exploration ROS 2 metapackage.
    </description>
    <author>Jinkun Wang</author>
    <maintainer email="jmcconn1@stevens.edu">John McConnell</maintainer>
    <license>MIT</license>

    <url type="repository">https://github.com/RobustFieldAutonomyLab/bruce</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>bruce_msgs</exec_depend>
    <exec_depend>bruce_slam</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
