<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bruce_slam</name>
  <version>0.0.1</version>
  <description>
        The BlueROV Underwater SLAM package (ROS 2).
  </description>
  <author>Jinkun Wang</author>
  <maintainer email="jmcconn1@stevens.edu">John McConnell</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ build dependencies for the pybind11 modules (pcl, cfar) only -->
  <build_depend>pybind11_vendor</build_depend>
  <build_depend>python3-dev</build_depend>
  <build_depend>libpointmatcher</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>eigen</build_depend>

  <!-- ROS interfaces / libraries used by the Python nodes at runtime only.
       These are intentionally exec_depend (not depend): the C++ does not build
       against them, so they must not be find_package()'d at configure time
       (which would, e.g., pull cv_bridge -> OpenCV -> CUDA into the build). -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>bruce_msgs</exec_depend>
  <exec_depend>sonar_oculus</exec_depend>
  <exec_depend>rti_dvl</exec_depend>
  <exec_depend>bar30_depth</exec_depend>
  <exec_depend>kvh_gyro</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
