<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kvh_gyro</name>
  <version>0.0.1</version>
  <description>
    ROS 2 message stub for the KVH DSP-1760 fiber-optic gyroscope driver.
    Reconstructed from bruce_slam usage so this repository builds standalone;
    replace with the upstream (Argonaut) driver package when available.
  </description>
  <author>Jinkun Wang</author>
  <maintainer email="jmcconn1@stevens.edu">John McConnell</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
